src/repository/snapshots/wallet_live__repository__repository_manager__tests__create_asset.snap
---
source: src/repository/repository_manager.rs
expression: new_asset
---
{
  "id": 1,
  "name": "Bitcoin",
  "unit_value": 100.0
}
