src/repository/snapshots/wallet_live__repository__repository_manager__tests__list_assets.snap
---
source: src/repository/repository_manager.rs
expression: assets
---
[
  {
    "id": 1,
    "name": "Ambev",
    "symbol": "ABEV3",
    "unit_value": 100.0
  }
]
