src/repository/snapshots/wallet_live__repository__repository_manager__tests__update_asset.snap
---
source: src/repository/repository_manager.rs
expression: updated_asset
---
{
  "id": 1,
  "name": "Ethereum",
  "symbol": "ETHR3",
  "unit_value": 20.0
}
